# py-rabbitmq-tutorials

./: .env.example  README.md  pyproject.toml  requirements.txt
src/queues/t01_hello_world/: INSTRUCTIONS.md  receive.py  send.py
src/queues/t02_work_queues/: INSTRUCTIONS.md  new_task.py  worker.py
src/queues/t03_publish_subscribe/: INSTRUCTIONS.md  emit_log.py  receive_logs.py
src/queues/t04_routing/: INSTRUCTIONS.md  emit_log_direct.py  receive_logs_direct.py
src/queues/t05_topics/: INSTRUCTIONS.md  emit_log_topic.py  receive_logs_topic.py
src/queues/t06_rpc/: INSTRUCTIONS.md  rpc_client.py  rpc_server.py
src/streams/t01_hello_world/: INSTRUCTIONS.md  config.py  receive.py  send.py
src/streams/t02_offset_tracking/: INSTRUCTIONS.md  offset_tracking_receive.py  offset_tracking_send.py
