[project]
name = "py-rabbitmq-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ "name" = "Guilherme Azevedo" }]
dependencies = [
    "pika>=1.3.2",
    "rstream>=0.20.8",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
    "Q000", # quotes: single quotes are preferred
    "D212", # multi-line-summary-first-line: clashes with D213
    "D",    # pydocstyle: removed during early development
    "T201", # print: allowed for tutorial purposes
]

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["S101"]
